# ollama_gateway

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
monitoring/: prometheus.yml
src/: cache.rs  config.rs  load_balancer.rs  main.rs  metrics.rs  models.rs  rate_limit.rs  state.rs  worker.rs
src/handlers/: generate.rs  health.rs  metrics.rs  mod.rs
