[package]
name = "ollama-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
reqwest = {version = "0.13.1", features = ["json"]}
tokio = {version = "1.49.0", features = ["full"]} 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
sha2 = "0.10"
prometheus = "0.14"
lazy_static = "1.4.0"
clap = { version = "4.3.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }